# tree-sitter-calque

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  highlights.scm  package.json  pyproject.toml  setup.py  test.clq  test.txt  tree-sitter.json
bindings/c/: tree-sitter-calque.pc.in
bindings/c/tree_sitter/: tree-sitter-calque.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_calque/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterCalqueTests/: TreeSitterCalqueTests.swift
src/: grammar.json  node-types.json  parser.c
